# mcp-context-manager-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_SETUP_GUIDE.md  FINAL_MCP_FIX_SUMMARY.md  INTEGRATION_SUMMARY.md  LICENSE  MCP_COMMUNICATION_FIX_SUMMARY.md  README.md  config.py  cursor_integration.json  cursor_mcp_config.json  debug_tools.py  demo_name_memory.py  env.example  fix_cursor_mcp.py  health_check_mcp.py  mcp.json  mcp_server_protocol.py  mypy.ini  pyproject.toml  quick_mcp_test.py  requirements.txt  restore_johny_name.py  run_server.py  setup_cursor_mcp.py  start_brain_mcp.sh  test_brain_mcp.py  test_brain_tools.py  test_conversation_recording.py  test_cursor_exact_config.py  test_cursor_mcp_communication.py  test_mcp_protocol.py  test_mcp_protocol_direct.py  test_name_memory.py
.github/: CODEOWNERS  pull_request_template.md
data/: identity_memory.json  plugin_registry.json
debug/: debug_context_injection.py  fix_automatic_injection.py  manual_context_injection.py  simple_mcp_test.py  test_automatic_injection.py
docs/: AI_PROMPT_CRAFTING_GUIDE.md  BRAIN_ENHANCEMENT_GUIDE.md  CONTEXT_INJECTION_GUIDE.md  ENHANCED_EMBEDDING_FEATURES.md  EXTENSIBLE_MCP_GUIDE.md  MEMORY_MIGRATION_GUIDE.md  README.md  README_MCP_REFACTOR.md  REFACTOR_SUMMARY.md
examples/: ai_prompt_crafting_example.py  brain_enhancement_demo.py  brain_memory_examples.py  context_injection_example.py  demo_ai_prompt_crafting.py  enhanced_embedding_demo.py  example_usage.py  extensible_mcp_demo.py  intelligent_context_injection_example.py
(+80 files in other folders)
