[project]
name = "mcp-context-manager-python"
version = "0.1.0"
description = "A robust MCP context manager for long-term memory and context synchronization between AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.0",
    "openai>=1.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-memory = "mcp_memory_server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
